# lamina

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml
src/: main.py  models.py
src/agents/: __init__.py  base.py
src/agents/fix_my_bug/: __init__.py  agent.py  models.py  prompts.py
src/agents/planner/: agent.py
src/llm/: client.py
src/llm/logs/: llm_calls.jsonl
src/orchestrator/: __init__.py  dispatcher.py  errors.py  execution.py  intents.py
src/tools/: base.py
tests/: conftest.py
tests/agents/fix_my_bug/: test_agent.py
tests/llm/: test_client.py
