[project]
name = "lamina"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "litellm>=1.74.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-recording>=0.13.4",
]

[tool.pytest.ini_options]
pythonpath = [ "." ]